
syntax = "proto3";

package spark.spark_operator;

import "proto/expr.proto";

option java_package = "org.apache.spark.sql.execution.serde";

// The basic message representing a Spark operator.
message Operator {
  oneof op_struct {
    Projection projection = 2;
  }
}

message Projection {
  repeated spark.spark_expression.Expr project_list = 1;
  Operator child = 2;
}
